2008-01-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ffap.el (ffap-read-file-or-url): Don't use let-binding to temporarily
	add a file-name handler.

2008-01-08  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-initialize): New autoloaded command.
	Rename from function bibtex-files-expand.  New optional arg select.
	(bibtex-flash-head): Allow blink-matching-delay being zero.
	(bibtex-clean-entry): Use atomic-change-group.
	(bibtex-format-entry): Check presence of required fields only
	after formatting of fields.  Use member-ignore-case.  Do not use
	bibtex-parse-entry.  Do not use booktitle field to set a missing title.
	(bibtex-autofill-entry): Do not call undo-boundary.
	(bibtex-lessp): Handle crossref keys that point to another bibtex file.
	(bibtex-sort-buffer, bibtex-prepare-new-entry, bibtex-validate):
	Parse keys if necessary.

2008-01-08  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-list-children-1): Put varnum in
	quotes in case of spaces, e.g. STL containers (not pretty).

2008-01-08  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gud-gdb-command-name):
	Explain "--annotate=3" option is necessary for the Graphical Interface.

2008-01-08  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/hideif.el (hide-ifdef-mode-menu): Put hide-ifdef commands
	on menu bar.

2008-01-08  Michael Albinus  <michael.albinus@gmx.de>

	* ffap.el (ffap-read-file-or-url): Let-bind
	`file-name-handler-alist' due to `rfn-eshadow-update-overlay'.

2008-01-08  Sven Joachim  <svenjoac@gmx.de>

	* vc-bzr.el: Fix typo in header.

2008-01-08  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (custom-deps, finder-data): Depend on autoloads
	instead of loaddefs.el.

2008-01-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-cvs.el (vc-cvs-annotate-time): Don't move backward when text
	gets inserted out-of-order.

2008-01-08  Riccardo Murri  <riccardo.murri@gmail.com>
